manual app template update

--- a/.env-dist
+++ b/.env-dist
@@ -8,12 +8,12 @@ YII_TRACE_LEVEL=0
 # Application
 # -----------
 
-APP_NAME=myapp-dotenv
+APP_ID=myapp
+APP_NAME=My Application
 APP_ADMIN_EMAIL=admin@myapp.local
 APP_ADMIN_PASSWORD=admin
 APP_SUPPORT_EMAIL=support@myapp.local
 APP_COOKIE_VALIDATION_KEY=changeme
-APP_COPYRIGHT=
 APP_PRETTY_URLS=0
 
 # Database
