--- a/.env-dist
+++ b/.env-dist
@@ -8,8 +8,8 @@ YII_TRACE_LEVEL=0
 # Application
 # -----------
 
-APP_ID=myapp
-APP_NAME=My Application
+APP_ID=playground
+APP_NAME=Phundament Playground
 APP_ADMIN_EMAIL=admin@myapp.local
 APP_ADMIN_PASSWORD=admin
 APP_SUPPORT_EMAIL=support@myapp.local
