--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
     "yiisoft/yii2-bootstrap": "2.*",
     "yiisoft/yii2-composer": "*",
     "yiisoft/yii2-swiftmailer": "2.*",
+    "yiisoft/yii2-redis": "2.*",
     "dmstr/yii2-db": "@stable",
     "dmstr/yii2-bootstrap": "@stable",
     "schmunk42/yii2-giiant": "dev-master",
