--- a/stacks/app-demo/docker-compose.yml
+++ b/stacks/app-demo/docker-compose.yml
@@ -1,8 +1,8 @@
 # Phundament 4 - Instant demo stack
 
 php:
-  command: "sh -c 'sh /app/src/setup.sh && php-fpm'"
-  image: phundament/app:4.0.0-rc14
+  command: "sh -c 'sh /app/src/run.sh'"
+  image: phundament/app:4.0.1
   environment:
     - APP_NAME=demo
     - APP_TITLE=Phundament Demo
